[gd_scene load_steps=3 format=3 uid="uid://b8x7k2m3n4p5q"]

[ext_resource type="Script" path="res://scripts/ui/StaminaBar.gd" id="1_stamina_bar"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.8, 0.2, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="StaminaBar" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 60.0
grow_horizontal = 0
script = ExtResource("1_stamina_bar")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="StaminaLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Stamina: 1000/1000"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="StaminaProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
value = 100.0
max_value = 100.0
show_percentage = false
theme_override_styles/fill = SubResource("StyleBoxFlat_1")